(0.5.0) Small fixups and `filterCommissionParticipants(...)`
